--- a/style.css
+++ b/style.css
@@ -2,3 +2,41 @@ html {
   height: 100%;
   width: 100%;
 }
+.wrapper-grid{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: 
+    "header"
+    "main"
+    "footer";
+  height: 100%;
+  width: 100%;
+}
+/* ----- HEADER ----- */
+#header-content{
+  grid-area: header;
+  display: flex;
+  background-color: #1a1a1a;
+  color: #fff;
+  padding: 1rem;
+}
+
+/* ----- MAIN ----- */
+#main-content{
+  grid-area: main;
+  display: flex;
+  background-color: #fff;
+  color: #1a1a1a;
+  padding: 1rem;
+}
+/* ----- FOOTER ----- */
+#footer-content{
+  grid-area: footer;
+  display: flex;
+  background-color: #1a1a1a;
+  color: #fff;
+  padding: 1rem;
+}
+
+
