--- a/style.css
+++ b/style.css
@@ -17,10 +17,126 @@ html {
 #header-content{
   grid-area: header;
   display: flex;
-  background-color: #1a1a1a;
+  background-color: #f2f2f2;
   color: #fff;
   padding: 1rem;
 }
+#left-header-contenair{
+  display: flex;
+  width: 40%;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+#right-header-contenair{
+  display: flex;
+  width: 60%;
+  justify-content: flex-end;
+  align-items: center;
+}
+#button-menu{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 1rem;
+  margin: 0.6rem;
+}
+#button-menu span{
+  display: block;
+  width: 1.5rem;
+  height: 0.3rem;
+  background-color: #262526;
+  margin: 0.3rem;
+  color: #f2f2f2;
+}
+#logo{
+  display: flex;
+  max-width: 250px;
+  max-height: 100px;
+}
+#logo a{
+  display: flex;
+  max-width: 100%;
+  max-height: auto;
+}
+#enterprise{
+  display: flex;
+  flex-direction: column;
+}
+/*#sous-title{
+  font-size: 0.8rem;
+  font-weight: 300;
+}*/
+#navbar-menu{
+  display: flex;
+  min-width: 70%;
+  justify-content: space-between;
+  list-style-type: none;
+  background-color: #f2f2f2;
+  
+}
+#navbar-menu li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  cursor: pointer;
+  
+}
+#navbar-menu li a{
+  color: #d92332;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+#navbar-menu li a:hover{
+  color: #d92332;
+  font-weight: bold;
+}
+#identification li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  cursor: pointer;
+
+}
+#identification li a{
+  color: #d92332;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+#identification li a:hover{
+  color: #d92332;
+  font-weight: bold;
+}
+#basket li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  cursor: pointer;
+}
+#basket a{
+  color: #d92332;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+#basket a:hover{
+  color: #d92332;
+  font-weight: bold;
+}
+
+
+
+
 
 /* ----- MAIN ----- */
 #main-content{
