--- a/style.css
+++ b/style.css
@@ -306,19 +306,26 @@ html body{
   flex-direction: column;
   background-color: #fff;
   color: #1a1a1a;
-  padding: 1rem;
+  
 }
 #carousel-contenair{
   display: flex;
-  width: 100%;
-  min-height: 700px;
-  flex-direction: column;
+  height: 40rem;
+  max-width: auto;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
-  background-color: lightcoral;
+  background-color: #262526;
 }
-/* ----- CONTENAIR SERVICE ----- */
+#carousel-scroll{
+  display: flex;
+  height: 100%;
+  max-width: 100vw;
+  overflow: scroll;
+  justify-content: center;
+  align-items: center;
+  background-color: #262526;
+}
+/* ----- START CONTENAIR SERVICE ----- */
 #service-contenair{
   display: flex;
   width: 100%;
@@ -334,7 +341,7 @@ html body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  
   color: #f2f2f2;
   font-weight: bold;
   
@@ -348,6 +355,7 @@ html body{
     "box5 box6 box7 box8";
   height: 100%;
   width: 100%;
+  padding: 0;
   
 }
 #service1{
@@ -357,9 +365,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
-  
-  
 }
 #service2{
   grid-area: box2;
@@ -368,7 +373,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
 }
 #service3{
   grid-area: box3;
@@ -377,7 +381,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
 }
 #service4{
   grid-area: box4;
@@ -386,7 +389,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
 }
 #service5{
   grid-area: box5;
@@ -395,7 +397,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
 }
 #service6{
   grid-area: box6;
@@ -404,7 +405,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
 }
 #service7{
   grid-area: box7;
@@ -413,7 +413,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
 }
 #service8{
   grid-area: box8;
@@ -422,8 +421,6 @@ html body{
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  
-
 }
 .card-service{
   display: flex;
@@ -432,11 +429,18 @@ html body{
   align-items: center;
   padding: 1rem;
   border: solid 1px #1a1a1a;
-  border-radius: 10px;
-  width: 15rem;
+  border-radius: 20px;
+  width: 13rem;
   height: 20rem;
   background: linear-gradient(135deg, #d92332, #f2f2f2);
   box-shadow: 2px 4px 10px #262526;
+  color: #262526;
+}
+.card-down-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .card-service h6{
   display: flex;
@@ -448,6 +452,7 @@ html body{
   border-bottom: solid 1px #1a1a1a;
   width: 100%;
   height: 3rem;
+  
 }
 .card-service a img{
   display: flex;
@@ -455,6 +460,9 @@ html body{
   text-decoration: none;
   max-height: 8rem;
   max-width: 8rem;
+  border-radius: 50%;
+  border: solid 3px #f2f2f2;
+  
 }
 .card-service:hover{
   display: flex;
@@ -464,6 +472,7 @@ html body{
   transform: scale(1.1);
   
 }
+/* ----- END CONTENAIR SERVICE ----- */
 #used-car-contenair{
   display: flex;
   width: 100%;
@@ -496,6 +505,12 @@ html body{
 
 
 
+
+
+
+
+
+
 /* ----- MEDIA QUERIES ----- */
 @media screen and (min-width: 1024px) {
   #navbar-menu{
@@ -517,6 +532,14 @@ html body{
   }
   #right-header-contenair{
     align-items: center;
+  }
+  .card-service{
+    width: 10rem;
+    height: 20rem;
+  }
+  .card-service h6{
+    
+    text-align: center;
   }
 }
 @media screen and (min-width: 260px) and (max-width: 767px) {
@@ -544,6 +567,27 @@ html body{
   #submenu-main-list-service{
     top: 146px;
     left: 0px;
+  }
+  #service-grid{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+      "box1 "" box2 "" box3 "" box4"
+      "box5 "" box6 "" box7 "" box8";
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    
+  }
+  .card-service{
+    width: 25rem;
+    height: 10rem;
+    flex-direction: row;
+  }
+  .card-down-content{
+    width: 15rem;
+    padding: 1rem;
   }
 
 }
