--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html body{
     "main"
     "footer";
   height: 100%;
-  width: 100%;
+  /*width: 100%;*/
 }
 /* ----- HEADER ----- */
 #header-content{
@@ -299,7 +299,7 @@ html body{
 }
 /* ----- END sous menu service -----  */
 
-/* ----- MAIN ----- */
+/* ----- START MAIN ----- */
 #main-content{
   grid-area: main;
   display: flex;
@@ -308,19 +308,19 @@ html body{
   color: #1a1a1a;
   
 }
-#carousel-contenair{
+.carousel-contenair{
   display: flex;
   height: 40rem;
   max-width: auto;
   justify-content: center;
   align-items: center;
-  background-color: #262526;
+  background-color: #5f5c5f;
 }
-#carousel-scroll{
+.carousel-scroll{
   display: flex;
   height: 100%;
   max-width: 100vw;
-  overflow: scroll;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   background-color: #262526;
@@ -328,23 +328,20 @@ html body{
 /* ----- START CONTENAIR SERVICE ----- */
 #service-contenair{
   display: flex;
-  width: 100%;
+  /*width: 100vw;*/
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
   background-color: #d92332;
 }
 #service-content{
   display: flex;
-  width: 95%;
+  /*width: 100vw;*/
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
   color: #f2f2f2;
   font-weight: bold;
-  
 }
 #service-grid{
   display: grid;
@@ -447,8 +444,7 @@ html body{
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  padding: 1rem;
-  margin: 1rem;
+  text-align: center;
   border-bottom: solid 1px #1a1a1a;
   width: 100%;
   height: 3rem;
@@ -473,24 +469,175 @@ html body{
   
 }
 /* ----- END CONTENAIR SERVICE ----- */
+.carousel-contenair{
+  display: flex;
+  height: 30rem;
+  max-width: auto;
+  justify-content: center;
+  align-items: center;
+  background-color: #5f5c5f;
+}
+#scroll-left-usedcar, #scroll-right-usedcar{
+  display: flex;
+  position: relative;
+  height: 5rem;
+  margin-top: -1.5rem;
+  line-height: 3rem;
+  font-size: 3rem;
+  color: #262526;
+  background-color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  z-index: 3;
+  text-decoration: none;
+}
+#scroll-left-usedcar{
+  left: 0;
+  justify-content: flex-start;
+  align-items: center;
+}
+#scroll-right-usedcar{
+  right: 0;
+  justify-content: flex-end;
+  align-items: center;
+}
+.card-content{
+  display: flex;
+  height: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  overflow: hidden;
+}
+/* ----- START CONTENAIR USED CAR ----- */
 #used-car-contenair{
   display: flex;
-  width: 100%;
+  /*width: 100%;*/
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: lightpink;
+}
+#used-car-content{
+  display: flex;
+  /*width: 100%;*/
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: lightpink;
+}
+#carousel-scroll-usedcar{
+  display: flex;
+  width: 95vw;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+.card-usedcar{
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  background-color: lightpink;
+  border: solid 1px #1a1a1a;
+  border-radius: 20px;
+  min-width: 13rem;
+  height: 20rem;
+  background: linear-gradient(135deg, #f2f2f2, rgb(156, 156, 156));
+  box-shadow: 2px 4px 10px #262526;
+  color: #262526;
+  margin: 1rem;
 }
+.card-usedcar:hover{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  border: solid  3px #f2f2f2;
+  transform: scale(1.2);
+}
+#card1-usedcar{
+  color: aqua;
+}
+#card2-usedcar{
+  color: aquamarine;
+}
+#card3-usedcar{
+  color: blueviolet;
+}
+#card4-usedcar{
+  color: brown;
+}
+#card5-usedcar{
+  color: cadetblue;
+}
+/* ----- END CONTENAIR USED CAR ----- */
+/* ----- START CONTENAIR TESTIMONY ----- */
 #testimony-contenair{
   display: flex;
-  width: 100%;
+  /*width: 100%;*/
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 1rem;
   background-color: lightgreen;
 }
+#testimony-content{
+  display: flex;
+  /*width: 100%;*/
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+#carousel-scroll-testimony{
+  display: flex;
+  width: 95vw;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+.card-testimony{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border: solid 1px #1a1a1a;
+  border-radius: 20px;
+  min-width: 13rem;
+  height: 20rem;
+  background: linear-gradient(135deg, #f2f2f2, rgb(156, 156, 156));
+  box-shadow: 2px 4px 10px #262526;
+  color: #262526;
+  margin: 1rem;
+}
+.card-testimony:hover{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  border: solid  3px #f2f2f2;
+  transform: scale(1.2);
+}
+#card1-testimony{
+  color: aqua;
+}
+#card2-testimony{
+  color: aquamarine;
+}
+#card3-testimony{
+  color: blueviolet;
+}
+#card4-testimony{
+  color: brown;
+}
+#card5-testimony{
+  color: cadetblue;
+}
+/* ----- END CONTENAIR TESTIMONY ----- */
 /* ----- FOOTER ----- */
 #footer-content{
   grid-area: footer;
@@ -576,14 +723,18 @@ html body{
       "box1 "" box2 "" box3 "" box4"
       "box5 "" box6 "" box7 "" box8";
     height: 100%;
-    width: 100%;
+    /*width: 100%;*/
     padding: 0;
     
   }
   .card-service{
-    width: 25rem;
+    width: 18rem;
     height: 10rem;
     flex-direction: row;
+  }
+  .card-service a img{
+    max-height: 5rem;
+    max-width: 5rem;
   }
   .card-down-content{
     width: 15rem;
