--- a/style.css
+++ b/style.css
@@ -343,6 +343,14 @@ html body{
   color: #f2f2f2;
   font-weight: bold;
 }
+#service-content h1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  
+  font-weight: bold;
+}
 #service-grid{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -469,13 +477,14 @@ html body{
   
 }
 /* ----- END CONTENAIR SERVICE ----- */
+/* ----- START CONTENAIR USED CAR ----- */
 .carousel-contenair{
   display: flex;
   height: 30rem;
   max-width: auto;
   justify-content: center;
   align-items: center;
-  background-color: #5f5c5f;
+  background-color: transparent;
 }
 #scroll-left-usedcar, #scroll-right-usedcar{
   display: flex;
@@ -521,10 +530,21 @@ html body{
 }
 #used-car-content{
   display: flex;
-  /*width: 100%;*/
+  max-width: 100vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+}
+#used-car-content img{
+  position:relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 0;
+  max-height: 20rem;
+  top: 0;
+  
 }
 #carousel-scroll-usedcar{
   display: flex;
@@ -532,7 +552,8 @@ html body{
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-color: #f2f2f2;
+  background-color: transparent;
+  z-index: 1;
 }
 .card-usedcar{
   display: flex;
@@ -542,12 +563,14 @@ html body{
   padding: 1rem;
   border: solid 1px #1a1a1a;
   border-radius: 20px;
+  width: 13rem;
   min-width: 13rem;
-  height: 20rem;
+  height: 22rem;
   background: linear-gradient(135deg, #f2f2f2, rgb(156, 156, 156));
   box-shadow: 2px 4px 10px #262526;
   color: #262526;
   margin: 1rem;
+  z-index: 2;
 }
 .card-usedcar:hover{
   display: flex;
@@ -555,6 +578,35 @@ html body{
   text-decoration: none;
   border: solid  3px #f2f2f2;
   transform: scale(1.2);
+  z-index: 2;
+}
+.card-usedcar-content-img img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: auto;
+  max-width: 100%;
+  border-bottom: solid 1px #262526;
+}
+.card-usedcar-content-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  color: #262526;
+}
+.card-usedcar-content-text button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  border: solid 1px #262526;
+  border-radius: 10px;
+  background-color: #d92332;
+  color: #f2f2f2;
+  font-weight: bold;
+  cursor: pointer;
 }
 #card1-usedcar{
   color: aqua;
@@ -588,7 +640,7 @@ html body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  overflow: hidden;
 }
 #carousel-scroll-testimony{
   display: flex;
@@ -596,7 +648,7 @@ html body{
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-color: #f2f2f2;
+  background-color: transparent;
 }
 .card-testimony{
   display: flex;
@@ -606,11 +658,12 @@ html body{
   padding: 1rem;
   border: solid 1px #1a1a1a;
   border-radius: 20px;
+  width: 13rem;
   min-width: 13rem;
   height: 20rem;
   background: linear-gradient(135deg, #f2f2f2, rgb(156, 156, 156));
   box-shadow: 2px 4px 10px #262526;
-  color: #262526;
+  
   margin: 1rem;
 }
 .card-testimony:hover{
@@ -620,20 +673,35 @@ html body{
   border: solid  3px #f2f2f2;
   transform: scale(1.2);
 }
+.card-testimony-content-rating{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem; 
+}
+.card-testimony-content-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  color: #262526;
+}
 #card1-testimony{
-  color: aqua;
+  color: darkgoldenrod;
 }
 #card2-testimony{
-  color: aquamarine;
+  color: darkgreen;
 }
 #card3-testimony{
-  color: blueviolet;
+  color: darkorchid;
 }
 #card4-testimony{
-  color: brown;
+  color: darkslateblue;
 }
 #card5-testimony{
-  color: cadetblue;
+  color: darkseagreen;
 }
 /* ----- END CONTENAIR TESTIMONY ----- */
 /* ----- START FOOTER ----- */
@@ -668,11 +736,10 @@ html body{
 #footer1{
   grid-area: footer1;
   display: flex;
-  justify-items: center;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 16rem;
+  flex-direction: column;
+  justify-content: center;
   padding: 1rem;
 }
 #footer1 ul{
@@ -681,12 +748,14 @@ html body{
   list-style-type: none;
   padding-right: 0;
   padding-left: 0;
+  padding-top: 1rem;
   
 }
 #footer1 ul li a{
   text-decoration: none;
   color: #f2f2f2;
   padding: 0.5rem;
+  border-top: solid 1px #fff;
 }
 #footer2{
   grid-area: footer2;
