--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@ html body{
   margin: 0px;
   padding: 0px;
 }
+.body-account{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  background: linear-gradient(135deg,#f2f2f2, #d92332, #f2f2f2);
+}
 .wrapper-grid{
   display: grid;
   grid-template-columns: 1fr;
@@ -70,8 +81,9 @@ html body{
   display: flex;
   max-width: 22rem;
   max-height: 10rem;
-  padding-left: 3rem;
+  padding-left: 2rem;
 }
+
 #logo a{
   display: flex;
   max-width: 100%;
@@ -828,6 +840,60 @@ html body{
   border-top: solid 1px #fff;
 }
 /* ----- END FOOTER ----- */
+/* ----- START FORM ----- */
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  
+  margin: 100px auto;
+  padding: 2rem;
+  box-shadow: 3px 5px 20px #4f4f4f;
+  background-color: none;
+  border-radius: 50px;
+}
+.field{
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0px auto;
+  border-radius: 10px;
+  
+}
+input, label, select {
+  display: flex;
+  width: 90%;
+  margin-right: 10px;
+  margin-left: 10px;
+  font-size: 1rem;
+  font-weight: 200;
+  border-radius: 10px;
+}
+label {
+  font-weight: 700;
+}
+p {
+  margin: -0.2rem auto;
+  font-weight: 400;
+  font-size: 12px;
+  color: #550066;
+}
+#btn-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  max-height: 2rem;
+  font-size: 1rem;
+  background-color: #9e5cc1;
+  border: solid 3px white;
+  border-radius: 30px;
+  color: white;
+  margin: 1rem;
+}
+/* ----- END FORM ----- */
+
 
 
 
