--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ html body{
   color: #fff;
   padding: 1rem;
 }
+#header-content-account{
+  grid-area: header;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:#f2f2f2;
+  margin: 2rem;
+  padding: 2rem;
+  border-radius: 1.5rem;
+  
+  box-shadow: 3px 5px 20px #4f4f4f;
+}
 #left-header-contenair{
   display: flex;
   /*width: 30%;*/
@@ -840,18 +852,55 @@ html body{
   border-top: solid 1px #fff;
 }
 /* ----- END FOOTER ----- */
+/* ----- START FORM CONTENT -----*/
+#form-content{
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  color: #262526;
+  
+  margin: 2rem auto;
+  padding: 2rem;
+  box-shadow: 3px 5px 20px #4f4f4f;
+  background-color: none;
+  border-radius: 3rem;
+}
+#form-content h4{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+  color: #f2f2f2;
+  width: 100%;
+  height: 3rem;
+}
+.choice-connect-down a, .choice-create-down a{
+  text-decoration: none;
+}
+.choice-connect-up, .choice-create-down{
+  display: none;
+}
+.choice-create-up, .choice-connect-down{
+  display: flex;
+}
+/* ----- END FORM CONTENT -----*/
 /* ----- START FORM ----- */
 #form {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 90%;
+}
+#field-content-create{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   
-  margin: 100px auto;
-  padding: 2rem;
-  box-shadow: 3px 5px 20px #4f4f4f;
-  background-color: none;
-  border-radius: 50px;
 }
 .field{
   display: flex;
@@ -861,7 +910,7 @@ html body{
   border-radius: 10px;
   
 }
-input, label, select {
+.field input, label, select {
   display: flex;
   width: 90%;
   margin-right: 10px;
@@ -870,26 +919,27 @@ input, label, select {
   font-weight: 200;
   border-radius: 10px;
 }
-label {
+.field label {
   font-weight: 700;
+  color: #f2f2f2
 }
-p {
+.field p {
   margin: -0.2rem auto;
   font-weight: 400;
   font-size: 12px;
-  color: #550066;
+  color: #f2f2f2;
 }
 #btn-submit {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 85%;
   max-height: 2rem;
   font-size: 1rem;
-  background-color: #9e5cc1;
+  background-color: #262526;
   border: solid 3px white;
   border-radius: 30px;
-  color: white;
+  color: #f2f2f2;
   margin: 1rem;
 }
 /* ----- END FORM ----- */
