--- a/style.css
+++ b/style.css
@@ -830,7 +830,7 @@ html body{
   display: flex;
   flex-direction: row;
   width: 6rem;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   
 }
@@ -943,6 +943,116 @@ html body{
   margin: 1rem;
 }
 /* ----- END FORM ----- */
+/* ----- START USEDCAR GRID ----- */
+#usedcar-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto [left] auto [center] auto [right] auto;
+  grid-template-areas:
+    "filter filter filter filter"
+    "usedcar1 usedcar2 usedcar3 usedcar4"
+    "usedcar5 usedcar6 usedcar7 usedcar8"
+    "usedcar9 usedcar10 usedcar11 usedcar12"
+    "usedcar13 usedcar14 usedcar15 usedcar16";
+  gap: 3rem;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  
+}
+.filter-content{
+  grid-area: filter;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  border: solid 1px #1a1a1a;
+  background: linear-gradient(#f2f2f2,#d92332, #f2f2f2);
+  box-shadow: 2px 4px 10px #262526;
+  color: #262526;
+}
+.filter-box{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+#filter-price, #filter-year, #filter-km{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+}
+.card-grid{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border: solid 1px #1a1a1a;
+  width: 13rem;
+  min-width: 13rem;
+  height: 20rem;
+  margin: 1rem;
+}
+.double-input{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+}
+.filter-box input[type="range"]{
+  position: relative;
+  color: #262526;
+}
+#from-range-price{
+  z-index: 1;
+}
+#card1-usedcar{
+  grid-area: usedcar1;
+}
+#card2-usedcar{
+  grid-area: usedcar2;
+}
+#card3-usedcar{
+  grid-area: usedcar3;
+}
+#card4-usedcar{
+  grid-area: usedcar4;
+}
+#card5-usedcar{
+  grid-area: usedcar5;
+}
+#card6-usedcar{
+  grid-area: usedcar6;
+}
+#card7-usedcar{
+  grid-area: usedcar7;
+}
+#card8-usedcar{
+  grid-area: usedcar8;
+}
+#card9-usedcar{
+  grid-area: usedcar9;
+}
+#card10-usedcar{
+  grid-area: usedcar10;
+}
+#card11-usedcar{
+  grid-area: usedcar11;
+}
+#card12-usedcar{
+  grid-area: usedcar12;
+}
+
+
+
 
 
 
