--- a/style.css
+++ b/style.css
@@ -943,9 +943,9 @@ html body{
   margin: 1rem;
 }
 /* ----- END FORM ----- */
-/* ----- START USEDCAR GRID ----- */
-#usedcar-grid{
-  display: grid;
+/* ----- START USEDCAR PAGE ----- */
+#usedcar-article-contenair{
+  /*display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto [left] auto [center] auto [right] auto;
   grid-template-areas:
@@ -954,7 +954,9 @@ html body{
     "usedcar5 usedcar6 usedcar7 usedcar8"
     "usedcar9 usedcar10 usedcar11 usedcar12"
     "usedcar13 usedcar14 usedcar15 usedcar16";
-  gap: 3rem;
+  gap: 3rem;*/
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
   padding: 0;
@@ -969,9 +971,13 @@ html body{
   margin-top: 2rem;
   margin-bottom: 2rem;
   border: solid 1px #1a1a1a;
-  background: linear-gradient(#f2f2f2,#d92332, #f2f2f2);
+  border-radius: 1rem;
+  background: linear-gradient(#d92332, #d9777f, #d92332);
   box-shadow: 2px 4px 10px #262526;
   color: #262526;
+}
+#from-price, #to-price, #from-year, #to-year, #from-km, #to-km{
+  font-weight: bold;
 }
 .filter-box{
   display: flex;
@@ -988,18 +994,20 @@ html body{
   align-items: center;
   padding: 1rem;
 }
-.card-grid{
+.update-card-usedcar{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 1rem;
   border: solid 1px #1a1a1a;
-  width: 13rem;
+  /*width: 13rem;
   min-width: 13rem;
-  height: 20rem;
+  height: 20rem;*/
   margin: 1rem;
 }
+
 .double-input{
   display: flex;
   flex-direction: column;
