--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ html body{
   justify-content: center;
   align-items: center;
   background-color: #f2f2f2;
+  z-index: 2;
   
   border: none;
   outline: none;
@@ -276,7 +277,7 @@ html body{
 #submenu-service{
   display: none;
   position: absolute;
-  top: 163px;
+  top: 162px;
   box-shadow: 2px 4px 10px #262526;
   color: #262526;
   flex-direction: column;
@@ -288,6 +289,7 @@ html body{
   cursor: pointer;
   margin: 0 0 1rem 0;
   padding: 1rem;
+  z-index: 2;
   
 }
 #submenu-service .submenu-list{
@@ -336,6 +338,7 @@ html body{
 .carousel-contenair{
   display: flex;
   height: 40rem;
+  
   max-width: 100vw;
   justify-content: center;
   align-items: center;
